--- a/src/umbra.scss
+++ b/src/umbra.scss
@@ -100,17 +100,17 @@ h2 {
 	float: right;
 	margin: 0em -0.5em 0.25em 0.25em;
 }
-#button_config {
+.button_root {
 	position: absolute;
-	top: 0.25em;
-	right: 0.25em;
 	z-index: 10;
 }
+#button_config {
+	top: 0.25em;
+	right: 0.25em;
+}
 #button_help {
-	position: absolute;
 	bottom: 0.25em;
 	right: 0.25em;
-	z-index: 10;
 }
 
 /* Forms */
