Make buttons use content-box.
Chrome gives buttons border-box and everything else content-box.
http://www.cssnewbie.com/button-height-and-a-broken-box-model/

This isn't part of normalize.css:
https://github.com/necolas/normalize.css/issues/73

Set content-box explicitly since all browsers with canvas
http://caniuse.com/#feat=canvas
also support the box-sizing property.
http://caniuse.com/#feat=css3-boxsizing

Current best practice: global inheritance.
http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/

I'd use border-box instead because that's slightly more intuitive;
but since everybody but IE was on content-box for a while, I might
stick with content-box for now.

--- a/src/umbra.scss
+++ b/src/umbra.scss
@@ -1,3 +1,15 @@
+/* Normalization */
+html {
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+}
+*, *:before, *:after {
+	-webkit-box-sizing: inherit;
+	-moz-box-sizing: inherit;
+	box-sizing: inherit;
+}
+
 /* Overlays and interface boxes */
 .overlay {
 	position: absolute;
@@ -58,13 +70,8 @@ h2 {
 	width: 1em; height: 1em;
 	line-height: 1em;
 }
-.icon.button {
-	width: auto; height: auto;
-}
-.button, a.button, button.button {
+.button, a.button {
 	/* Button shape */
-	/*width: 1em;*/
-	/*height: 1em;*/
 	padding: 0.25em;
 	border-radius: 0.25em;
 	/* color */
