--- a/src/_overlays.scss
+++ b/src/_overlays.scss
@@ -23,7 +23,7 @@
 	text-align: left;
 	padding: 0.5em 1.5em;
 	border-radius: 1em;
-	max-width: 25em;
+	max-width: $lMaxWidth;
 	max-height: 100%;
 	overflow-y: auto;
 }
